--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
     "url": "https://aistudiocdn.com/url@^0.11.4",
     "firebase/app": "https://aistudiocdn.com/firebase@^10.8.0/app",
     "firebase/auth": "https://aistudiocdn.com/firebase@^10.8.0/auth",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
