--- a/index.html
+++ b/index.html
@@ -4,28 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Codex Playground</title>
-    <script type="importmap">
-    {
-      "imports": {
-        "vite": "https://aistudiocdn.com/vite@^7.2.4",
-        "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "react": "https://aistudiocdn.com/react@^19.2.0",
-        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-        "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
-        "cors": "https://aistudiocdn.com/cors@^2.8.5",
-        "express": "https://aistudiocdn.com/express@^5.1.0",
-        "nodemailer": "https://aistudiocdn.com/nodemailer@^7.0.11",
-        "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-        "path": "https://aistudiocdn.com/path@^0.12.7",
-        "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
-        "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-        "url": "https://aistudiocdn.com/url@^0.11.4"
-      }
-    }
-    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -130,7 +108,29 @@
           border-radius: 0.5rem;
       }
     </style>
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
+    "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
+    "express": "https://aistudiocdn.com/express@^5.2.1",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "nodemailer": "https://aistudiocdn.com/nodemailer@^7.0.11",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
+    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+  }
+}
+</script>
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
